Change line in dockerfile to remove mutiple run statements

--- a/docker-dynamodb-local/Dockerfile
+++ b/docker-dynamodb-local/Dockerfile
@@ -1,18 +1,15 @@
 FROM anapsix/alpine-java:8
+MAINTAINER Greg Sochanik <greg@sochanik.com>
 
-# Create working space
 RUN mkdir /var/dynamodb_wd
 WORKDIR /var/dynamodb_wd
 
-# Default port for DynamoDB Local
 EXPOSE 8000
 
-# Get the package from Amazon
-RUN wget http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz
-RUN tar xzf dynamodb_local_latest.tar.gz
-RUN rm dynamodb_local_latest.tar.gz
+RUN wget http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz && \
+  tar xzf dynamodb_local_latest.tar.gz && \
+  rm dynamodb_local_latest.tar.gz
 
-# Default command for image
 ENTRYPOINT ["java", "-Djava.library.path=.", "-jar", "DynamoDBLocal.jar", "-dbPath", "/var/dynamodb_local"]
 CMD ["-port", "8000"]
 
