Update Makefile to remove ECR push - these are meant for DockerHub

--- a/docker-awscli/Makefile
+++ b/docker-awscli/Makefile
@@ -1,13 +1,10 @@
 build: ## Build as a docker image tagged with DOCKER_TAG
 	docker build --tag $(DOCKER_TAG) .
 
-ecr-login:
-	docker run \
-	  --env AWS_ACCESS_KEY_ID \
-	  --env AWS_SECRET_ACCESS_KEY \
-	  --volume ~/.aws:/root/.aws \
-	  jess/awscli ecr get-login --region $(REGION) \
-	| bash
+login:
+	docker login \
+	  -u gregsochanik \
+	  -p $(DOCKER_PWD)
 
-push: ecr-login ## Push DOCKER_TAG to Amazon ECR
+push: login ## Push DOCKER_TAG to DockerHub
 	docker push $(DOCKER_TAG)
