Add email address to docker login to fix Email:EOF error

--- a/docker-awscli/Makefile
+++ b/docker-awscli/Makefile
@@ -4,7 +4,8 @@ build: ## Build as a docker image tagged with DOCKER_TAG
 login:
 	docker login \
 	  -u gregsochanik \
-	  -p $(DOCKER_PWD)
+	  -p $(DOCKER_PWD) \
+		-e greg@sochanik.com
 
 push: login ## Push DOCKER_TAG to DockerHub
 	docker push $(DOCKER_TAG)
