Do the same with the dynamod-local build

--- a/docker-dynamodb-local/Makefile
+++ b/docker-dynamodb-local/Makefile
@@ -3,14 +3,15 @@ build: ## Build as a docker image tagged with DOCKER_TAG
 
 login:
 	docker login \
-	  -u gregsochanik \
-	  -p $(DOCKER_PWD)
+		-u gregsochanik \
+		-p $(DOCKER_PWD) \
+		-e greg@sochanik.com
 
 push: login ## Push DOCKER_TAG to DockerHub
 	docker push $(DOCKER_TAG)
 
 run:
 	docker run -d \
-	  --publish 8000:8000 \
-	  --name dynamodb \
-	  $(DOCKER_TAG)
+		--publish 8000:8000 \
+		--name dynamodb \
+		$(DOCKER_TAG)
