Add tasks to Makefile

--- a/docker-mongoexport-s3/Makefile
+++ b/docker-mongoexport-s3/Makefile
@@ -1,2 +1,16 @@
-build: 
-	docker build --tag mongoexport-s3 .
+ifndef DOCKER_TAG
+	DOCKER_TAG = mongoexport-s3
+endif
+
+build: ## Build as a docker image tagged with DOCKER_TAG
+	docker build --tag $(DOCKER_TAG) .
+
+login:
+	docker login \
+		-u gregsochanik \
+		-p $(DOCKER_PWD) \
+		-e greg@sochanik.com
+
+push: login ## Push DOCKER_TAG to DockerHub
+	docker push $(DOCKER_TAG)
+
