Change docker push to always push as latest, with another version tagged as build number

--- a/docker-mongoexport-s3/Makefile
+++ b/docker-mongoexport-s3/Makefile
@@ -12,5 +12,6 @@ login:
 		-e greg@sochanik.com
 
 push: login ## Push DOCKER_TAG to DockerHub
+	docker tag $(DOCKER_TAG) $(DOCKER_TAG):$(BUILD_NUMBER)
 	docker push $(DOCKER_TAG)
 
