--- a/docker-awscli/Makefile
+++ b/docker-awscli/Makefile
@@ -4,8 +4,7 @@ build: ## Build as a docker image tagged with DOCKER_TAG
 login:
 	docker login \
 		-u gregsochanik \
-		-p $(DOCKER_PWD) \
-		-e greg@sochanik.com
+		-p $(DOCKER_PWD) 
 
 push: login ## Push DOCKER_TAG to DockerHub
 	docker push $(DOCKER_TAG)
